# ImZip

./: Cargo.toml  README.md
docs/: index.html  script.js  style.css
examples/: genimg.rs
src/: batch.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  metadata.rs  pipeline.rs  report.rs  resize.rs
src/encoders/: avif.rs  gif.rs  jpeg.rs  mod.rs  png.rs  webp.rs
tests/: cli_tests.rs  encoder_tests.rs  integration.rs  metadata_tests.rs  template_tests.rs
tests/common/: mod.rs
